# rp2040_lvgl_freertos

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  LICENSE  LVGL_import.cmake  LWESP_import.cmake  README.md  lv_conf.h  lwesp_ll_rp2040.c  lwesp_opts.h  main.c  rfid.c  rfid.h  rtos_workspace.code-workspace  st7789.c  st7789.h
littlefs-lib/: CMakeLists.txt  LICENSE  README.md  lfs.c  lfs.h  lfs_util.h  pico_hal.c  pico_hal.h
mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
